# harness-auto-test-evidence

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TASK.codex.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
docs/: README_EN.md  README_JA.md
docs/acceptance/: AC-20260630-01.md  AC-20260703-postpoc-001.md  AC-20260703-postpoc-002.md  AC-20260703-postpoc-003.md  AC-20260703-postpoc-004.md  AC-20260703-postpoc-005.md  AC-20260703-postpoc-006.md  AC-20260703-postpoc-007.md  AC-20260703-postpoc-008.md  AC-20260703-postpoc-009.md  AC-20260703-postpoc-010.md  AC-20260703-postpoc-011.md  AC-20260703-postpoc-012.md  AC-20260703-postpoc-013.md  AC-20260703-postpoc-014.md  AC-20260703-postpoc-015.md  AC-20260703-postpoc-016.md  DOCS_FRESHNESS_REVIEW_20260705.md  FIVE_TOOL_VALIDATION_GATE_HATE_GAP_042_060.md  HATE_GAP_CLOSURE_ACCEPTANCE.md  HATE_REQUIREMENTS_EXPANSION_ACCEPTANCE.md  INDEX.md  MAJOR_OSS_DEEP_OPERATIONAL_HARDENING_20260704.md  MAJOR_OSS_OPERATIONAL_VALIDATION_20260704.md  MAJOR_OSS_REATTACK_20260704.md  (+10 more)
governance/: responsibility-registry.json
tests/: test_acceptance_pipeline.py  test_adapter_corpus_manifest.py  test_adapter_family_packet.py  test_adapter_manifest_schema.py  test_adapter_sdk.py  test_adapters_coverage.py  test_adapters_junit.py  test_adapters_static_contract_mutation.py  test_agent_quality.py  test_analysis_adapter_capability_diff.py  test_analysis_audience_report_pack.py  test_analysis_contradiction_detection.py  test_analysis_environment_diff.py  test_analysis_evidence_synthesis.py  test_analysis_fixture_quality.py  test_analysis_flaky_classification.py  test_analysis_historical_regression.py  test_analysis_impact_analysis.py  test_analysis_oracle_classification.py  test_analysis_test_quality.py  test_analysis_test_recommendation.py  test_api_contract_report.py  test_api_import_export_authz.py  test_api_rate_limit.py  test_api_read_model.py  test_api_read_model_contract.py  test_api_read_model_inventory.py  test_artifact_lifecycle.py  test_artifact_redaction.py  test_artifact_safety.py  test_benchmark_catalog.py  test_bridge_router.py  test_check_file_size.py  test_cli_release_candidate.py  test_codemap_update.py  test_commercial_truthfulness.py  test_connectors_ops.py  test_connectors_sso_scim.py  test_cross_record_validator.py  test_dashboard_state_report.py  (+113 more)
tools/: check_file_size.py
(+3101 files in other folders)
