[project]
name = "harness-auto-test-evidence"
version = "0.3.0"
description = "Local-first auto-test evidence normalizer for HATE P0a golden path."
requires-python = ">=3.11"
readme = "docs/README_EN.md"
license = "MIT"
authors = [{ name = "RNA4219" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jsonschema[format]>=4.23,<5",
]

[project.urls]
Homepage = "https://github.com/RNA4219/harness-auto-test-evidence"
Repository = "https://github.com/RNA4219/harness-auto-test-evidence"
Issues = "https://github.com/RNA4219/harness-auto-test-evidence/issues"

[dependency-groups]
dev = [
    "mypy>=1.15,<2",
    "pytest>=8.0",
    "ruff>=0.12,<1",
    "types-jsonschema>=4.23,<5",
]

[project.scripts]
hate = "hate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "e2e: end-to-end CLI and workflow checks",
    "subprocess: process execution and cleanup checks",
    "package: built distribution checks",
    "slow: checks unsuitable for the fast PR lane",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hate"]

[tool.hatch.build.targets.wheel.force-include]
"schemas/HATE/v1" = "hate/_schemas/HATE/v1"
"schemas/HATE-bridge/v1" = "hate/_schemas/HATE-bridge/v1"
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = [
    "src/hate/schema_resources.py",
    "src/hate/plugin_runner.py",
    "src/hate/platform_cli.py",
    "src/hate/bridge/router.py",
    "src/hate/bridge/materializer.py",
]